src/components/Home/CatalogSection/CatalogSection.module.scss
@import "../../../common-scss/variables";

.categoriesContainer {
    width: 100%;
    margin-top: 40px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    grid-column-gap: 40px;
    grid-row-gap: 20px;
}

.categoryContainer {
    margin: 0 20px 0 0;
    height: 112px;
    width: 220px;

    a {
        text-decoration: none;
    }
}

.categoryImage {
    position: relative;
    float: right;
    top: -50px;
    max-height: 80px;
    max-width: 60px;
    transform: translateX(30%);
}

.categoryNameBlock {
    position: relative;
    box-sizing: border-box;
    width: 214px;
    height: 92px;
    padding: 8px;
    display: flex;
    align-items: center;
    background-color: $second-color;
    box-shadow: 0 4px 4px $shadow-color;
}

.categoryName {
    font-weight: bold;
    text-transform: uppercase;
    color: $main-font-color;
}

.toCatalogButton {
    display: block;
    box-sizing: border-box;
    width: 214px;
    height: 36px;
    margin-top: 20px;
    padding: 8px 20px;
    background-color: $second-color;
    border: none;
    outline: none;
    font-size: 14px;
    font-weight: bold;
    color: $main-font-color;
    box-shadow: 0 4px 4px $shadow-color;
    text-decoration: none;
}

.categoryNameBlock, .toCatalogButton {
    -webkit-user-select: none;
    cursor: pointer;
    transition-duration: 200ms;

    &:hover {
        background-color: darken($second-color, 5);
    }
}

.categoryContainer, .toCatalogButton {
    -webkit-user-select: none;
    cursor: pointer;
    transition-duration: 200ms;

    &:active {
        transform: scale(0.97);
    }
}

